# simpleufcs

./: .gitignore  README.md  benchmark.py  profile_1.py  pyproject.toml  setup.py  simpleufcs.py  test.py
